styles.css
body{
    background-color: hsl(210, 46%, 95%);
    font-family: 'Manrope', sans-serif;
    font-size: 13px;
}

.container{
    background-color: white;
    border-radius: 10px;
    display: flex;
    flex-direction: row;
    margin: auto;
    position: relative;
    width: 730px;
    margin-top: 30vh;
}

.drawers{
    width: 285px;
    border-top-left-radius: 10px;
    border-bottom-left-radius: 10px;
}

aside{
    margin-left:40px;
    margin-right: 60px;
}

h2{
    color: hsl(217, 19%, 35%);
    font-size: 19px ;
    margin-top: 30px;
}

p{
    color:hsl(214, 17%, 51%);
    line-height: 1.5;
}

footer{
    align-items: center;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    line-height: 1.8;
    margin-bottom: 15px;
}

.user{
    align-items: center;
    color: hsl(217, 19%, 35%);
    display: flex;
    flex-direction: row;
    font-size: 10px;
    margin: 0;
}

.avatar{
    border-radius: 50%;
    height: 40px;
    margin-right: 20px ;
}

.date{
    color: hsl(212, 23%, 69%) ;
    font-weight: 700px;
}

.share.icon{
    background-color:hsl(210, 46%, 95%) ;
    border-radius: 50%;
    font-size: 20px;
    height: 20px;
    padding: 10px ;
    width: 20px;
}

button{
    border:none;
    background: none;
    z-index: 2;
}
.share.icon:hover{
    background:hsl(212, 23%, 69%);;
}

#bubble{
    align-items: center;
    background-color: hsl(217, 19%, 35%);
    border-radius: 10px;
    bottom: 95px;
    box-shadow: 5px 5px 15px ;
    color: hsl(212, 23%, 69%);
    display: none;
    flex-direction: row;
    font-size: 15px;
    height: 50px;
    justify-content: space-around;
    position:absolute;
    right: -50px;
    width: 240px;
}

.text{
    margin-left: 25px;
    opacity: 0.8;
}
.iconsList{
    height: 15px;
    margin: 15px;
}

.iconsList.t{
    margin-right: 20px;
}

.text{
    display: inline;
}

.attribution { 
    font-size: 11px; 
    text-align: center; 
}

.attribution a { 
    color: hsl(228, 45%, 44%); 
}

@media (max-width:768px){

    .container{
        flex-direction: column;
        width: 320px;
        margin-top: 10vh;
    }

    .drawers{
        width: 100%;
        border-top-left-radius: 10px;
        border-bottom-left-radius: 0px;
        border-top-right-radius: 10px;
    }

    aside{
        margin-left: 25px;
        margin-right: 40px;
    }

    h2{
        font-size: 16px;
    }

    p{
        font-size: 13px;
    }
    
    #bubble{
        bottom: 0px;
        box-shadow: 0px 0px 0px ;
        font-size: 15px;
        height: 80px;
        right: 0px;
        width:320px;
        justify-content: left;
        border-top-left-radius: 0px;;
        border-top-right-radius: 0px;
    }
}

